# resume-tracker

./: .gitignore  README.md  pyproject.toml
resume_tracker/: cli.py  config.py  models.py  notifier.py  resume_updater.py  scanner.py  utils.py  watcher.py
tests/: test_config.py  test_e2e.py  test_resume_updater.py  test_scanner.py  test_utils.py  test_watcher.py
